[package]
name = "regex-cursor"
description = "regex fork that can search discontiguous haystacks"
version = "0.1.3"
edition = "2021"
documentation = "https://docs.rs/regex-cursor"
author = "Pascal Kuthe <pascalkuthe@pm.me>"
repository = "https://github.com/pascalkuthe/regex-cursor"
readme = "README.md"
keywords = ["regex", "dfa", "automata", "automaton", "nfa"]
license = "MIT OR Apache-2.0"
categories = ["text-processing"]
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
memchr = "2.6"
regex-automata = "0.4.5"
regex-syntax = "0.8.2"
ropey = { version = "1.6.0", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0.79"
proptest = "1.2.0"
regex-test =  "0.1.0"

[features]
default = ["perf-inline", "ropey"]
perf-inline = []
ropey = ["dep:ropey"]
